All change until 2016/04/21 v1.0.0 b1.0.1
- Add & display events.
- Schedule reminder for events.
- Dismiss event when clicked done.
- Pull to add new event
- Calendar implemented
- Indicate dates that have events on calendar
- Other small changes.

Notes:
(From now on, in every commit, I will be writing a little note). This is another major step in the development of this app. I have successfully implemented calendar view. Now, events are displayed, events can be added and dismissed. Keep in mind the idea of more gesture recognizers. I will start displaying events in the table below calendar view. Also, start setting up the preference page.

--- a/Done!/DatePickerCell.xib
+++ b/Done!/DatePickerCell.xib
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="269.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Dc8-rj-YK5">
+                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="10" translatesAutoresizingMaskIntoConstraints="NO" id="Dc8-rj-YK5">
                         <rect key="frame" x="0.0" y="8" width="320" height="216"/>
                         <date key="date" timeIntervalSinceReferenceDate="467373714.16895503">
                             <!--2015-10-24 10:01:54 +0000-->
