--- a/Done!/EventTableViewCell.xib
+++ b/Done!/EventTableViewCell.xib
@@ -2,18 +2,62 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="jMh-8Y-oS7">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="idEventCell" rowHeight="70" id="jMh-8Y-oS7" customClass="EventTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jMh-8Y-oS7" id="l5u-jE-jh2">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="287" height="69.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Computer Science Class" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogi-lh-CXa">
+                        <rect key="frame" x="28" y="14" width="205" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="April 7, 2016 15:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyS-4b-56k">
+                        <rect key="frame" x="28" y="40.5" width="205" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vd3-AJ-Cf8">
+                        <rect key="frame" x="241" y="20" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="Ybo-jX-Muj"/>
+                            <constraint firstAttribute="width" constant="30" id="kP9-3c-X4U"/>
+                        </constraints>
+                        <state key="normal" title="Done" image="circle-nf.png"/>
+                        <connections>
+                            <action selector="done:" destination="jMh-8Y-oS7" eventType="touchUpInside" id="tSY-OP-jfn"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottomMargin" secondItem="WyS-4b-56k" secondAttribute="bottom" constant="3" id="DFS-TH-qju"/>
+                    <constraint firstItem="Vd3-AJ-Cf8" firstAttribute="leading" secondItem="WyS-4b-56k" secondAttribute="trailing" constant="8" id="PiZ-jB-Z10"/>
+                    <constraint firstItem="Vd3-AJ-Cf8" firstAttribute="top" secondItem="l5u-jE-jh2" secondAttribute="topMargin" constant="12" id="Z09-fi-Lg3"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Vd3-AJ-Cf8" secondAttribute="trailing" constant="8" id="Z1F-9r-jTW"/>
+                    <constraint firstItem="Ogi-lh-CXa" firstAttribute="top" secondItem="l5u-jE-jh2" secondAttribute="topMargin" constant="6" id="gQb-LI-4pk"/>
+                    <constraint firstItem="WyS-4b-56k" firstAttribute="leading" secondItem="l5u-jE-jh2" secondAttribute="leadingMargin" constant="20" id="pn3-aw-L4s"/>
+                    <constraint firstItem="Ogi-lh-CXa" firstAttribute="leading" secondItem="l5u-jE-jh2" secondAttribute="leadingMargin" constant="20" id="rod-AL-iOB"/>
+                    <constraint firstItem="Vd3-AJ-Cf8" firstAttribute="leading" secondItem="Ogi-lh-CXa" secondAttribute="trailing" constant="8" id="u6h-6x-gRf"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="187" y="309"/>
+            <connections>
+                <outlet property="button" destination="Vd3-AJ-Cf8" id="SI0-eL-pLb"/>
+                <outlet property="dateLabel" destination="WyS-4b-56k" id="GL4-R5-MO8"/>
+                <outlet property="titleLabel" destination="Ogi-lh-CXa" id="TyN-II-K5M"/>
+            </connections>
+            <point key="canvasLocation" x="187" y="322"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="circle-nf.png" width="200" height="200"/>
+    </resources>
 </document>
