All changes until 07/21/2016 10:00PM
- TodayVC modified. Getting current local date instead of date in central timezone
- AnalysisVC modified.
- GraphTableViewCell improved. Views origin, size and other details are fixed.
- GraphTableCell nib updated.
- Timeline wrong data bug fixed.
- Some other small changes.

Notes:
Small but important improvements. Some critical bugs are fixed. However, look through note and patch those bugs. Good night

--- a/Done!/Base.lproj/Main.storyboard
+++ b/Done!/Base.lproj/Main.storyboard
@@ -1116,7 +1116,7 @@
                                     <constraint firstItem="Nh3-Cd-No8" firstAttribute="centerX" secondItem="uve-pA-Klf" secondAttribute="centerX" id="Ovd-Ti-Cxg"/>
                                     <constraint firstAttribute="height" constant="250" id="QVh-bS-cTL"/>
                                     <constraint firstItem="Nh3-Cd-No8" firstAttribute="top" secondItem="uve-pA-Klf" secondAttribute="top" id="sdy-xN-j1o"/>
-                                    <constraint firstAttribute="bottom" secondItem="siA-GK-4Jb" secondAttribute="bottom" constant="-12" id="vuT-ic-feS"/>
+                                    <constraint firstAttribute="bottom" secondItem="siA-GK-4Jb" secondAttribute="bottom" constant="-20" id="vuT-ic-feS"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -1280,6 +1280,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="WiM-vY-LxD"/>
-        <segue reference="diM-LW-AMI"/>
+        <segue reference="xsq-Rv-5Da"/>
     </inferredMetricsTieBreakers>
 </document>
