--- a/Done!/TimelineTableViewCell.xib
+++ b/Done!/TimelineTableViewCell.xib
@@ -8,11 +8,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idTimelineCell" id="KGk-i7-Jjw" customClass="TimelineTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idTimelineCell" rowHeight="350" id="KGk-i7-Jjw" customClass="TimelineTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="350"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="299"/>
+                <frame key="frameInset" width="320" height="349"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="acH-wS-jwy">
@@ -22,10 +22,15 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
+                        <connections>
+                            <outlet property="dataSource" destination="KGk-i7-Jjw" id="nIK-Iz-RtH"/>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="fDO-22-xRb"/>
+                        </connections>
                     </collectionView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06/05 12:29PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DJc-V2-h8g">
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06/05 12:29PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DJc-V2-h8g">
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="25" id="pjW-A0-J7O"/>
+                            <constraint firstAttribute="height" constant="33" id="pjW-A0-J7O"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                         <nil key="textColor"/>
@@ -41,13 +46,13 @@
                     </datePicker>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DJc-V2-h8g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="3iU-nm-tYJ"/>
+                    <constraint firstItem="DJc-V2-h8g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="3iU-nm-tYJ"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Vw9-Wp-t5U"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="a47-yl-WlQ"/>
-                    <constraint firstItem="acH-wS-jwy" firstAttribute="top" secondItem="DJc-V2-h8g" secondAttribute="bottom" constant="8" id="flg-Iq-Wpa"/>
+                    <constraint firstItem="acH-wS-jwy" firstAttribute="top" secondItem="DJc-V2-h8g" secondAttribute="bottom" constant="-33" id="flg-Iq-Wpa"/>
                     <constraint firstItem="acH-wS-jwy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ivG-2B-Iyl"/>
-                    <constraint firstItem="DJc-V2-h8g" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="oGI-uH-JzS"/>
-                    <constraint firstItem="DJc-V2-h8g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="p69-62-qfw"/>
+                    <constraint firstItem="DJc-V2-h8g" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="8" id="oGI-uH-JzS"/>
+                    <constraint firstItem="DJc-V2-h8g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="p69-62-qfw"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="leading" secondItem="acH-wS-jwy" secondAttribute="trailing" constant="-8" id="wgI-ns-nTz"/>
                     <constraint firstAttribute="bottom" secondItem="acH-wS-jwy" secondAttribute="bottom" constant="8" id="wpd-Tt-tdL"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="top" secondItem="DJc-V2-h8g" secondAttribute="bottom" constant="8" id="zvL-8o-dxB"/>
