--- a/Done!/ValuePickerCell.xib
+++ b/Done!/ValuePickerCell.xib
@@ -2,30 +2,39 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11173.2" systemVersion="16A270f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11143.2"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idValuePicker" rowHeight="80" id="tpg-2G-bqL" customClass="CustomCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idValuePicker" rowHeight="110" id="tpg-2G-bqL" customClass="CustomCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tpg-2G-bqL" id="Hlh-Gx-OJs">
-                <frame key="frameInset" width="375" height="79"/>
+                <frame key="frameInset" width="375" height="109"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EPh-0O-8XR">
+                    <pickerView contentMode="scaleToFill" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="EPh-0O-8XR">
                         <connections>
                             <outlet property="dataSource" destination="tpg-2G-bqL" id="WaX-g2-7hc"/>
                             <outlet property="delegate" destination="tpg-2G-bqL" id="AQb-p5-yxm"/>
                         </connections>
                     </pickerView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select project" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OBW-AU-H3e">
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="EPh-0O-8XR" firstAttribute="top" secondItem="OBW-AU-H3e" secondAttribute="bottom" constant="4" id="Nek-cV-rUj"/>
                     <constraint firstItem="EPh-0O-8XR" firstAttribute="leading" secondItem="Hlh-Gx-OJs" secondAttribute="leading" id="QQa-yM-zaw"/>
-                    <constraint firstItem="EPh-0O-8XR" firstAttribute="top" secondItem="Hlh-Gx-OJs" secondAttribute="top" id="S6p-po-eFg"/>
+                    <constraint firstItem="OBW-AU-H3e" firstAttribute="trailing" secondItem="Hlh-Gx-OJs" secondAttribute="trailingMargin" id="Qzw-i2-cQU"/>
                     <constraint firstAttribute="trailing" secondItem="EPh-0O-8XR" secondAttribute="trailing" id="Vzs-eS-uY2"/>
+                    <constraint firstItem="OBW-AU-H3e" firstAttribute="leading" secondItem="Hlh-Gx-OJs" secondAttribute="leadingMargin" constant="8" id="g42-bW-bxK"/>
                     <constraint firstAttribute="bottom" secondItem="EPh-0O-8XR" secondAttribute="bottom" id="hdU-z0-6ST"/>
+                    <constraint firstItem="OBW-AU-H3e" firstAttribute="top" secondItem="Hlh-Gx-OJs" secondAttribute="topMargin" id="tpg-B6-wE1"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
